Configurações iniciais do projeto Essas configurações são baseadas no boilerplate do repositorio base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "paths": {
+      "@/*": ["*"],
+      "@components/*": ["./src/components"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
