--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     ]
   },
   "dependencies": {
-    "leaflet": "^1.8.0",
+    "leaflet": "1.7.1",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-leaflet": "^4.0.1",
+    "react-leaflet": "3.1.0",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
