--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=8080",
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
@@ -12,7 +12,8 @@
     "test:ci": "jest --runInBand",
     "generate": "yarn plop --plopfile generators/plopfile.js",
     "postinstall": "husky install",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "lint-staged": {
     "src/**/*": [
@@ -22,15 +23,23 @@
   },
   "dependencies": {
     "@styled-icons/evaicons-outline": "^10.34.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "leaflet": "1.7.1",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
+    "next-seo": "^5.4.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-leaflet": "3.1.0",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "2.7.0",
+    "@graphql-codegen/typescript": "2.6.0",
+    "@graphql-codegen/typescript-operations": "2.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
